src/components/content/logo-title/LogoTitle.module.css
.logo {
  width: 90%;
  max-width: 50vw;
  height: auto;
  
  display: block;
  padding: 1em;
  margin: 0 auto 0.5em auto;
  background-color: white;

  border: 2px solid var(--color-one);
  border-radius: 0.25em;
  border-style: solid;
}

.titleSection {
  padding: 0.25em;
  text-align: start;
}

